src/App.module.scss
.header {
  display: flex;
  align-items: center;
  padding: 2rem 1.6rem 2.5rem 1.6rem;

  h1 {
    color: #7b7b7b;
    font-family: 'Poppins', 'serif';
    font-size: 1.8rem;
    font-weight: bold;
    margin-left: auto;
  }

  .kofiButtonContainer {
    margin-left: auto;

    .kofiButton {
      display: flex;
      border: none;
      cursor: pointer;

      svg {
        width: 4rem;
        height: 3.3rem;
        background-color: #e6e6e6;
      }
    }
  }
}

.main {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.8rem;
  padding: 0 1.4rem 1.4rem 1.4rem;
}

